PLA-1344  decimaltobytes url (#84)
* dcn url to use decimal for node id

* update swagger

* linter
